@@ -1,3 +1,11 @@
+2009-11-14 Christian Feuersaenger <ludewich@users.sourceforge.net>
+
+	- pgfmanual.pdf: provided a 'make dist' target in version_for_pdftex/en
+	which activates automatic hyper references from codeexamples to key
+	declarations.
+	This utilizes larger memory limits, configured in
+	doc/generic/pgf/text-en/texmf.cnf
+
 2009-11-12 Christian Feuersaenger <ludewich@users.sourceforge.net>
 
 	- Added the 'small mindmap' style.
